Apache2 znuny with SSLEngine on

--- a/apache2/sites-available.ssl.conf
+++ b/apache2/sites-available.ssl.conf
@@ -136,7 +136,7 @@
         
         SSLVerifyClient require
         SSLVerifyDepth  2
-        SSLCACertificateFile /etc/apache2/cert/noosc-ca.crt
+        SSLCACertificateFile /etc/apache2/cert/ca.crt
         SSLOptions +ExportCertData +StdEnvVars
         SSLUserName SSL_CLIENT_S_DN_CN
         <Location /znuny>
